@@ -574,6 +574,13 @@ def delete_nonestimator_parameters(parameters):
         del parameters['StatisticalTestMetric']
         del parameters['StatisticalTestThreshold']
 
+    if 'ReliefUse' in parameters.keys():
+        del parameters['ReliefUse']
+        del parameters['ReliefNN']
+        del parameters['ReliefSampleSize']
+        del parameters['ReliefDistanceP']
+        del parameters['ReliefNumFeatures']
+
     return parameters
 
 
