@@ -20,6 +20,8 @@ Added
   when using multilabel workflow.
 - Full oversampling of underrepresented classes.
 - log_uniform and exp_uniform distributions
+- Volume now also computed when only providing a Nifti
+- Single class Relief feature selection.
 
 
 Changed
@@ -31,6 +33,8 @@ Changed
 - Cleaned crossval function for readability.
 - SVM hyperparameters are adjusted.
 - GroupSel now has a separate Hyperparameter for all texture groups.
+- Ranked images are now named with their rank, making it easier to read the
+  output.
 
 Fixed
 ~~~~~
@@ -46,6 +50,8 @@ Fixed
 - Plot_SVM: Y_score needs to be computed with predict_proba, not the decision_function.
 - SearchCV, Ensemble, Predict: Average was taken over binary scores. The
   average is now taken over the posteriors.
+- Plotting posteriors in ranked_images now correctly prints the posterior. Was
+  previously converted to integer.
 
 
 2.1.0 - 2018-08-09
